--- a/book/asciidoc/persistent.asciidoc
+++ b/book/asciidoc/persistent.asciidoc
@@ -78,7 +78,7 @@ BlogPost
 
 main :: IO ()
 main = runSqlite ":memory:" $ do
-    runMigration migrateAll
+      runMigration migrateAll :: IO ()
 
     johnId <- insert $ Person "John Doe" $ Just 35
     janeId <- insert $ Person "Jane Doe" Nothing
