--- a/book/asciidoc/persistent.asciidoc
+++ b/book/asciidoc/persistent.asciidoc
@@ -35,7 +35,7 @@ declarative syntax. Some other nice features are:
   wider number of storage layers.
   Joins and other SQL specific functionality can be achieved through using
   a raw SQL layer (with very little type safety).
-  An additional library, link:http://hackage.haskell.org/package/esqueleto[Esqueleto],
+  An additional library, link:https://github.com/bitemyapp/esqueleto[Esqueleto],
   builds on top of the Persistent data model, adding type-safe joins and SQL functionality.
 
 * Automatic database migrations in non-production environments to speed up
@@ -1561,8 +1561,8 @@ code which easily moves from different backend types. The downside is that you
 lose out on some backend-specific features. Probably the biggest casualty is
 SQL join support.
 
-Fortunately, thanks to Felipe Lessa, you can have your cake and eat it too. The
-link:http://hackage.haskell.org/package/esqueleto[Esqueleto] library provides
+Fortunately, thanks to Felipe Lessa and Chris Allen, you can have your cake and eat it too. The
+link:https://github.com/bitemyapp/esqueleto[Esqueleto] library provides
 support for writing type safe SQL queries, using the existing Persistent
 infrastructure. The Haddocks for that package provide a good introduction to
 its usage. And since it uses many Persistent concepts, most of your existing
