--- a/book/asciidoc/wiki-chat-example.asciidoc
+++ b/book/asciidoc/wiki-chat-example.asciidoc
@@ -138,7 +138,7 @@ we can take advantage of whatever +RenderMessage+ instance the master site
 defines. This also explains why we have a +RenderMessage+ constraint on the
 +YesodChat+ typeclass.
 
-The next call to +getYesod+ is _not_ ++lift++ed. The reasoning here is simple:
+The next call to +getSubYesod+ is _not_ ++lift++ed. The reasoning here is simple:
 we want to get the subsite's foundation type in order to access the message
 channel. If we instead ++lift++ed that call, we'd get the master site's
 foundation type instead, which is not what we want in this case.
@@ -355,6 +355,7 @@ import           Text.Markdown
 import           Yesod
 import           Yesod.Auth
 import           Yesod.Auth.Dummy
+import           System.SetEnv
 
 data App = App
     { getChat     :: Chat
@@ -547,6 +548,10 @@ main = do
 
     -- Initially have a blank database of wiki pages
     icontent <- newIORef Map.empty
+
+    -- Set web server's listening port required by warpEnv function
+    -- This env var is set up automatically if 'yesod devel' is used
+    setEnv "PORT" "3000"
 
     -- Run our app
     warpEnv App
