--- a/book/asciidoc/yesods-monads.asciidoc
+++ b/book/asciidoc/yesods-monads.asciidoc
@@ -229,8 +229,7 @@ Likewise, you can get request information inside a +Widget+. Here we can determi
 {-# LANGUAGE QuasiQuotes           #-}
 {-# LANGUAGE TemplateHaskell       #-}
 {-# LANGUAGE TypeFamilies          #-}
-import           Data.List (sortBy)
-import           Data.Ord  (comparing)
+import           Data.List (sortOn)
 import           Data.Text (Text)
 import           Yesod
 
@@ -276,8 +275,8 @@ showPeople = do
     msort <- runInputGet $ iopt textField "sort"
     let people' =
             case msort of
-                Just "name" -> sortBy (comparing personName) people
-                Just "age"  -> sortBy (comparing personAge)  people
+                Just "name" -> sortOn personName people
+                Just "age"  -> sortOn personAge  people
                 _           -> people
     [whamlet|
         <dl>
@@ -401,7 +400,10 @@ How do we get such an instance? One approach is to simply use the +CRandT+ monad
 
 [source, haskell]
 ----
-{-# LANGUAGE OverloadedStrings, QuasiQuotes, TemplateHaskell, TypeFamilies #-}
+{-# LANGUAGE OverloadedStrings #-}
+{-# LANGUAGE QuasiQuotes       #-}
+{-# LANGUAGE TemplateHaskell   #-}
+{-# LANGUAGE TypeFamilies      #-}
 import Yesod
 import Crypto.Random (SystemRandom, newGenIO)
 import Control.Monad.CryptoRandom
@@ -461,13 +463,14 @@ involved:
 {-# LANGUAGE TypeFamilies          #-}
 {-# LANGUAGE TypeSynonymInstances  #-}
 import           Control.Monad              (join)
-import           Control.Monad.Catch        (catch, throwM)
+import           Control.Monad.Catch        (throwM)
 import           Control.Monad.CryptoRandom
 import           Control.Monad.Error.Class  (MonadError (..))
 import           Crypto.Random              (SystemRandom, newGenIO)
 import           Data.ByteString.Base16     (encode)
 import           Data.IORef
 import           Data.Text.Encoding         (decodeUtf8)
+import           UnliftIO.Exception         (catch)
 import           Yesod
 
 data App = App
@@ -492,7 +495,7 @@ instance MonadError GenError Handler where
     throwError = throwM
     catchError = catch
 instance MonadCRandom GenError Handler where
-    getCRandom  = wrap crandom
+    getCRandom = wrap crandom
     {-# INLINE getCRandom #-}
     getBytes i = wrap (genBytes i)
     {-# INLINE getBytes #-}
