--- a/book/asciidoc/pr01.asciidoc
+++ b/book/asciidoc/pr01.asciidoc
@@ -95,7 +95,7 @@ Sebastopol, CA 95472 +
 We have a web page for this book, where we list errata, examples, and any additional information. You can access this page at:
 
 
-link:$$http://shop.oreilly.com/product/0636920023142.do$$[]
+link:$$https://shop.oreilly.com/product/0636920035664.do$$[]
 
 
 ++++++++++++++++++++++++++++++++++++++
