--- a/book/asciidoc/scaffolding-and-the-site-template.asciidoc
+++ b/book/asciidoc/scaffolding-and-the-site-template.asciidoc
@@ -31,6 +31,8 @@ well). This executable provides a few commands (run +stack exec \-- yesod
 scaffolding site with a postgres database backend in a directory named
 +my-project+. You can see the other available templates using the command
 *stack templates*.
+ 
+NOTE: Stack version 2 or later is required to create the scaffold.
 
 The key thing differing in various available templates (from the
 +stack templates+ command) is the database backend. You get a few
