--- a/book/asciidoc/routing-and-handlers.asciidoc
+++ b/book/asciidoc/routing-and-handlers.asciidoc
@@ -45,7 +45,7 @@ route declaration.
 
 ==== Pieces
 
-One of the first thing Yesod does when it gets a request is split up the
+One of the first things Yesod does when it gets a request is split up the
 requested path into pieces. The pieces are tokenized at all forward slashes.
 For example:
 
