--- a/book/asciidoc/haskell.asciidoc
+++ b/book/asciidoc/haskell.asciidoc
@@ -139,7 +139,7 @@ boilerplate of specifying the same language pragmas in every source file.
 We'll end up using quite a few language extensions in this book (at the time of
 writing, the scaffolding uses 13). We will not cover the meaning of all of
 them. Instead, please see the
-link:$$http://www.haskell.org/ghc/docs/latest/html/users_guide/ghc-language-features.html$$[GHC
+link:$$https://downloads.haskell.org/ghc/latest/docs/users_guide/$$[GHC
 documentation].
 
 [[I_sect12_d1e671]]
