--- a/book/asciidoc/persistent.asciidoc
+++ b/book/asciidoc/persistent.asciidoc
@@ -721,8 +721,7 @@ All the select functions use a similar interface, with slightly different output
 
 NOTE: A +Source+ is a stream of data, and is part of the +conduit+ package. I
 recommend reading the
-link:https://www.fpcomplete.com/user/snoyberg/library-documentation/conduit-overview[School
-of Haskell conduit tutorial] to get started.
+link:https://github.com/snoyberg/conduit[Official Conduit tutorial] to get started.
 
 |selectList|A list containing all the IDs and values from the database. All records will
      be loaded into memory.
